--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 /* Open Sanas */
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
@@ -5,8 +6,11 @@
 @tailwind components;
 @tailwind utilities;
 
-.container {
-  @apply max-w-1160 mx-auto px-5;
+
+.container{
+max-width: 1240px;
+margin: auto;
+padding:0 5 0 5;
 }
 
 .bgcolor {
@@ -54,7 +58,22 @@ a.active {
 
 
 
+/* marquee */
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 
+.animate-scroll {
+  display: flex;
+  animation: scroll 60s linear infinite;
+}
+
+/* marquee */
 
 
 /* src/components/accordionItem.css */
@@ -98,3 +117,23 @@ a.active {
 .headBG{
   background-image: url('https://my.soliq.uz/main/markup/images/bg-main.jpg')
 }
+
+
+
+
+/* /////chat bot */
+@keyframes slideUp {
+  from {
+      transform: translateY(100%);
+      opacity: 0;
+  }
+  to {
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
+
+.animate-slide-up {
+  animation: slideUp 0.4s ease-out forwards;
+}
+/* /////chat bot */
