--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ a.active {
 
 
 .footBG{
-  background-image: url('https://toshvilstat.uz/templates/uztailwind/images/bg-pattern.jpg');
+  background-image: url('https://kadastr.uz/public/assets/img/kadastr/back.jpg');
 }
 
 .headBG{
